--- a/qlthucung/Views/RoleAdmin/ChangePassword.cshtml
+++ b/qlthucung/Views/RoleAdmin/ChangePassword.cshtml
@@ -19,6 +19,9 @@
                     <form asp-action="ChangePassword" asp-controller="RoleAdmin" method="post" class="form" id="form-forgot">
                         @Html.AntiForgeryToken()
 
+                        <input type="hidden" asp-for="Email" />
+                        <input type="hidden" asp-for="Token" />
+
                         <h3 class="heading text-center">Thay đổi mật khẩu</h3>
                         @if (TempData["Success"] != null)
                         {
