--- a/qlthucung/Views/RoleAdmin/Index.cshtml
+++ b/qlthucung/Views/RoleAdmin/Index.cshtml
@@ -42,6 +42,7 @@
                     <td>@user.AccessFailedCount</td>
                     <td>
                         <form asp-action="UpdateRole" asp-controller="RoleAdmin" method="post" class="d-flex justify-content-center">
+                            <input type="hidden" name="pageNumber" value="@Model.PageIndex" />
                             <input type="hidden" name="userName" value="@user.UserName" />
                             <select name="newRole" class="form-select form-select-sm me-1">
                                 <option value="User" selected="@(user.Role == "User")">User</option>
@@ -51,21 +52,31 @@
                         </form>
                     </td>
                     <td>
-                        @if (user.LockoutEnd != null || user.LockoutEnd > DateTimeOffset.UtcNow)
+                        @if (user.UserName != User.Identity.Name)
                         {
-                            <form asp-action="UnlockUser" asp-controller="RoleAdmin" method="post">
-                                <input type="hidden" name="userName" value="@user.UserName" />
-                                <button type="submit" class="btn btn-sm btn-success">Mở khóa</button>
-                            </form>
+                            if (user.LockoutEnd != null && user.LockoutEnd > DateTimeOffset.UtcNow)
+                            {
+                                <form asp-action="UnlockUser" asp-controller="RoleAdmin" method="post">
+                                    <input type="hidden" name="userName" value="@user.UserName" />
+                                    <input type="hidden" name="pageNumber" value="@Model.PageIndex" />
+                                    <button type="submit" class="btn btn-sm btn-success">Mở khóa</button>
+                                </form>
+                            }
+                            else
+                            {
+                                <form asp-action="LockUser" asp-controller="RoleAdmin" method="post">
+                                    <input type="hidden" name="userName" value="@user.UserName" />
+                                    <input type="hidden" name="pageNumber" value="@Model.PageIndex" />
+                                    <button type="submit" class="btn btn-sm btn-danger">Khóa</button>
+                                </form>
+                            }
                         }
                         else
                         {
-                            <form asp-action="LockUser" asp-controller="RoleAdmin" method="post">
-                                <input type="hidden" name="userName" value="@user.UserName" />
-                                <button type="submit" class="btn btn-sm btn-danger">Khóa</button>
-                            </form>
+                            <span class="text-muted">Không thể khóa chính bạn</span>
                         }
                     </td>
+
                 </tr>
             }
         </tbody>
@@ -76,7 +87,7 @@
         @if (Model.HasPreviousPage)
         {
             <li class="page-item">
-                <a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex - 1 })">Previous</a>
+                <a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex - 1, searchTerm = ViewBag.SearchTerm })">Previous</a>
             </li>
         }
 
@@ -88,15 +99,18 @@
             }
             else
             {
-                <li class="page-item"><a class="page-link" href="@Url.Action("Index", new { pageNumber = i })">@i</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="@Url.Action("Index", new { pageNumber = i, searchTerm = ViewBag.SearchTerm })">@i</a>
+                </li>
             }
         }
 
         @if (Model.HasNextPage)
         {
             <li class="page-item">
-                <a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex + 1 })">Next</a>
+                <a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex + 1, searchTerm = ViewBag.SearchTerm })">Next</a>
             </li>
         }
+
     </ul>
 </div>
