--- a/qlthucung/Views/Admin/CreateDm.cshtml
+++ b/qlthucung/Views/Admin/CreateDm.cshtml
@@ -20,11 +20,11 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="ParentId" class="control-label">Danh mục cha</label>
-                <select asp-for="ParentId" class="form-control" asp-items="@ViewBag.ShowDropList">
+                <label asp-for="ParentID" class="control-label">Danh mục cha</label>
+                <select asp-for="ParentID" class="form-control" asp-items="@ViewBag.ShowDropList">
                     <option value="">--Chọn danh mục--</option>
                 </select>
-                <span asp-validation-for="ParentId" class="text-danger"></span>
+                <span asp-validation-for="ParentID" class="text-danger"></span>
             </div>
 
             <div class="form-group">
