--- a/qlthucung/Views/Admin/ListDanhMucSP.cshtml
+++ b/qlthucung/Views/Admin/ListDanhMucSP.cshtml
@@ -51,7 +51,7 @@
             {
                 <tr>
                     <td>@item.Tendanhmuc</td>
-                    <td>@item.ParentId</td>
+                    <td>@item.ParentID</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.IdDanhmuc" class="text-primary f2"><i class="fas fa-edit"></i></a>
                         <a asp-action="Delete" asp-route-id="@item.IdDanhmuc" class="text-primary f2"><i class="fa-solid fa-trash-can"></i></a>
