--- a/qlthucung/Views/SanPham/Index.cshtml
+++ b/qlthucung/Views/SanPham/Index.cshtml
@@ -132,26 +132,26 @@
 
     <div class="banner-top banner-top-2 row">
         <div class="col-md-3 col-sm-6">
-            <a href="@Url.Action("Index", "Home")" class="banner-top-2-child" style="background-color: #5BAB7B;">
-                <div class="text-white">Pet Store thú cưng</div>
+            <a href="@Url.Action("Index", "SanPham")" class="banner-top-2-child" style="background-color: #5BAB7B;">
+                <div class="text-white">Mua sắm thú cưng, sản phẩm phụ kiện,...</div>
             </a>
         </div>
 
         <div class="col-md-3 col-sm-6">
-            <a href="@Url.Action("Index", "Home")" class="banner-top-2-child" style="background-color: #5C9CCA;">
-                <div class="text-white" style="margin: 0 auto;">Pet Hotel khách sạn cho thú cưng</div>
+            <a href="@Url.Action("Index", "DichVu")" class="banner-top-2-child" style="background-color: #5C9CCA;">
+                <div class="text-white" style="margin: 0 auto;">Đặt lịch SPa cho thú cưng</div>
             </a>
         </div>
 
         <div class="col-md-3 col-sm-6">
-            <a href="@Url.Action("Index", "Home")" class="banner-top-2-child" style="background-color: #C67B36;">
-                <div class="text-white" style="margin: 0 auto;">Pet Grooming spa dành cho thú cưng</div>
+            <a href="@Url.Action("UserIndex", "AdminChat")" class="banner-top-2-child" style="background-color: #C67B36;">
+                <div class="text-white" style="margin: 0 auto;">Liên hệ, tư vấn trực tiếp</div>
             </a>
         </div>
 
         <div class="col-md-3 col-sm-6">
-            <a href="@Url.Action("Index", "Home")" class="banner-top-2-child" style="background-color: #AB5D58;">
-                <div class="text-white">Sản phẩm độc quyền</div>
+            <a href="#" class="banner-top-2-child" style="background-color: #AB5D58;">
+                <div class="text-white">Giải đáp kiến thức cần thiết</div>
             </a>
         </div>
 
@@ -234,7 +234,7 @@
 </div>
 <!-- End Tất cả sản phẩm -->
 
-<div class="body p-1 pt-5 pb-4">
+<div class="body p-1 pt-5">
     <div class="body__mainTitle pb-5" style="display: flex; justify-content: space-between;">
         <h2>SẢN PHẨM CỦA CHÚNG TÔI</h2>
     </div>
@@ -294,6 +294,8 @@
             </div>
         }
     </div> *@
+</div>
+
 </div>
 
 <div class="banner pt-5 pb-4">
