--- a/qlthucung/Views/Shared/_Layout.cshtml
+++ b/qlthucung/Views/Shared/_Layout.cshtml
@@ -21,6 +21,12 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="~/Content/css1/styles.css" rel="stylesheet" />
     <link href="~/Content/css1/Adminstyle.css" rel="stylesheet" />
+    <style>
+        #Thongtin {
+            margin-top: auto; /* đẩy footer xuống đáy */
+            width: 100%; /* luôn kéo dài full width */
+        }
+    </style>
 </head>
 <body id="page-top">
     <header class="header">
@@ -42,10 +48,6 @@
                         <li class="nav-item"><a class="nav-link pl-1" href="/">Trang chủ</a></li>
                         <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="SanPham">Sản phầm</a></li>
                         <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="DichVu">Dịch vụ</a></li>
-                        @if (!User.IsInRole("Admin"))
-                        {
-                            <li class="nav-item"><a class="nav-link" asp-action="UserIndex" asp-controller="AdminChat">Liên hệ</a></li>
-                        }
                         <li style="display: flex; align-items: center;">
                             <div class="login pl-2" id="loginClick">
                                 @if (User.Identity.IsAuthenticated)
@@ -116,10 +118,12 @@
 
     @RenderBody()
 
-    <footer class="text-center bg-black text-muted" id="Thongtin">
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    <footer class="bg-black text-muted w-100" id="Thongtin">
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05); width: 100%;">
             Design by:
-            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">"Shoppet - Nâng niu từng bước chân, chăm sóc trọn vẹn yêu thương!"🐾❤️</a>
+            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">
+                "Shoppet - Nâng niu từng bước chân, chăm sóc trọn vẹn yêu thương!"🐾❤️
+            </a>
         </div>
     </footer>
 
